--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,8 @@ set -g mouse on
 set -g base-index 1
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
+# set vi mode in tmux
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
