--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,6 @@
 {
     "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "vetur.experimental.templateInterpolationService": true
+    "python.linting.pylintEnabled": true
+    /* "vetur.experimental.templateInterpolationService": true */
 }
 
