set suggest trigger min length

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "suggest.minTriggerInputLength": 5
     /* "python.linting.pylintEnabled": true */
     /* "vetur.experimental.templateInterpolationService": true */
 }
