--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,10 +1,39 @@
 #################################
+#             Corners           #
+#################################
+# requires: https://github.com/sdhand/compton
+corner-radius = 10.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'awesome'",
+  "class_g = 'URxvt'",
+  "class_g = 'XTerm'",
+  "class_g = 'kitty'",
+  "class_g = 'Alac1itty'",
+  "class_g = 'Poly1ar'",
+  "class_g = 'code-oss'",
+  "class_g = 'firefox'",
+  "class_g = 'Thunderbird'"
+];
+round-borders = 1;
+round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+];
+round-borders-rule = [
+  "3:class_g      = 'XTerm'",
+  "3:class_g      = 'URxvt'",
+  "10:class_g     = 'Alacritty'",
+  "0:class_g    *?= 'xfce4-terminal'",
+  "15:class_g     = 'Signal'"
+];
+
+#################################
 #             Shadows           #
 #################################
-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
+shadow = false;
+shadow-radius = 4;
+shadow-offset-x = 1;
+shadow-offset-y = 1;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
@@ -24,16 +53,18 @@ fade-out-step = 0.03;
 #################################
 #   Transparency / Opacity      #
 #################################
-inactive-opacity = 0.85;
-frame-opacity = 0.8;
+inactive-opacity = 0.9;
+frame-opacity = 1;
 inactive-opacity-override = false;
-active-opacity = 0.85;
+active-opacity = 0.9;
 # inactive-dim = 0.0
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
-  "90:class_g = 'xfce4-terminal'",
-  "90:class_g = 'firefox'",
-  "99:class_g = 'google-chrome'"
+  "90:class_g *?= 'xfce4-terminal'",
+  "98:class_g *?= 'firefox'",
+  "98:class_g *?= 'google-chrome'",
+  "99:class_g *?= 'code-oss'",
+  "100:class_g *?= 'krita'"
 ];
 
 #################################
@@ -72,7 +103,7 @@ log-level = "warn";
 wintypes:
 {
   dnd = { shadow = false; }
-  drop_menu = { opacity = 0.95; shadow = false; }
-  pop_menu = { opacity = 0.95; shadow = false; }
-  menu = { opacity = 0.95; shadow=false; }
+  drop_menu = { opacity = 0.9; shadow = false; }
+  pop_menu = { opacity = 0.9; shadow = false; }
+  menu = { opacity = 0.9; shadow=false; }
 };
