--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -56,7 +56,7 @@ fade-out-step = 0.03;
 inactive-opacity = 0.9;
 frame-opacity = 1;
 inactive-opacity-override = false;
-active-opacity = 0.9;
+active-opacity = 1;
 # inactive-dim = 0.0
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
@@ -64,7 +64,8 @@ opacity-rule = [
   "98:class_g *?= 'firefox'",
   "98:class_g *?= 'google-chrome'",
   "99:class_g *?= 'code-oss'",
-  "100:class_g *?= 'krita'"
+  "100:class_g *?= 'krita'",
+  "100:class_g *?= 'mpv'"
 ];
 
 #################################
